#midl command
#midl /I "C:\Program Files (x86)\Windows Kits\10\Include\10.0.15063.0\winrt";
#     /I "C:\Program Files (x86)\Windows Kits\10\Include\10.0.15063.0\um";
#     /I "C:\Program Files (x86)\Windows Kits\10\Include\10.0.15063.0\ucrt";
#     /I "C:\Program Files (x86)\Windows Kits\10\Include\10.0.15063.0\shared" DeckLink\Win\include\DeckLinkAPI.idl

import("//build/toolchain/win/midl.gni")

midl("DeckLinkAPI_idl") {
  sources = [
    ".\DeckLink\Win\include\DeckLinkAPI.idl",
  ]
}

executable("DeckLink") {
  sources = [
    "DeckLink.cpp",
  ]

  include_dirs = [
    "$target_gen_dir",
  ]

  libs = [
    "Ole32.lib",
  ]

  deps = [
    ":DeckLinkAPI_idl",
  ]
}
